--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,10 @@ variables:
  
 steps:
 - task: UseDotNet@2
+  displayName: 'Use .NET Core sdk'
+  inputs:
+    packageType: 'sdk'
+    version: '6.0.x'
+    includePreviewVersions: true
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
