--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,11 @@ steps:
     packageType: 'sdk'
     version: '6.0.x'
     includePreviewVersions: true
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet test'
+  inputs:
+  command: test
+  projects: '**/*Tests/*.csproj'
+  testRunTitle: 'xUNit Test Run'
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
