--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,12 @@ steps:
     testRunTitle: 'xUNit Test Run'
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+ displayName: 'dotnet publish'
+ inputs:
+   command: publish
+   publishWebProjects: false
+   projects: 'src/CommandAPI/*.csproj'
+   arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+- task: PublishBuildArtifacts@1
+ displayName: 'publish artifacts'
